2018.03.02:
 * начало работы над идеей (постановка задачи в README.md)
 * набросан макет модуля rfpos.c/rfpos.h
