@@ -141,7 +141,7 @@ dF(X) = W(X0,Y) * (X-X0)
 6. Решить переопределенную систему линейных уравнений,
    найти поправку dX для точки X:  W(X,Y) * dX = F
 
-7. Учесть поправку dX: X <= X + dX
+7. Учесть поправку dX: X <= X - dX
 
 8. Перейти к следующей итерации (к п.3)
 
