@@ -6,10 +6,10 @@
  * (C) 2018 Alex Zorg <azorg@mail.ru>
  * Licensed by GNU General Public License version 2
  */
-
+//----------------------------------------------------------------------------
 #include <math.h> // sqrt()
+#include <stdio.h> // printf()
 #include "rfpos.h"
-
 //----------------------------------------------------------------------------
 // инициализация основного компонента, выделение памяти
 // (в случае ошибки возращается отрицательный код ошибки)
@@ -50,14 +50,13 @@ static void rfpos_f(
 
   for (i = 0; i < n; i++)
   {
-    double q = x->d[0] - y->d[i][0];
-    double s = q * q;
-    for (j = 1; j < d; j++)
+    double s = 0., q;
+    for (j = 0; j < d; j++)
     {
       q = x->d[j] - y->d[i][j];
       s += q * q;
     }
-    s = x->d[d] - y->d[i][d];
+    q = x->d[d] - y->d[i][d];
     f->d[i] = s - q * q;
   }
 }
@@ -86,19 +85,20 @@ static void rfpos_w(
 int rfpos_calc(
   rfpos_t *self, // структура данных компонента
   // на входе:
-  int it,    // максимальное число итераций
-  double e,  // желаемая численная точность оценки координат [м]
-  int d,     // размерность координат или число неизвестных (2 или 3)
-  int n,     // число приёмников, принявших задерженный сигнал (n > d)
-  double *m, // матрица координат приёмников [n][d]
-  double *t, // вектор временных меток приёма сигнала приёмниками [с], n шт
-  double *p, // радиус вектор предпологаемого нахождения приёмника
+  int it,          // максимальное число итераций
+  double e,        // желаемая численная точность оценки координат [м]
+  int d,           // размерность координат или число неизвестных (2 или 3)
+  int n,           // число приёмников, принявших задерженный сигнал (n > d)
+  const double *m, // матрица координат приёмников [n][d]
+  const double *t, // вектор временных меток приёма сигнала приёмниками [n]
+  const double *p, // радиус вектор предпологаемого нахождения приёмника [d]
   // на выходе:
   double *t0, // оценка времени излучения сигнала передатчиком
-  double *r)  // радиус вектор приёмника, если решение найдено [м], d шт
+  double *r)  // радиус вектор приёмника, если решение найдено [d]
 {
   int i, j;
-  double tmin, *ptr, d0;
+  double tmin, d0;
+  const double *ptr;
   
   if (n > self->n) return -1; // ошибка
   if (d > self->d) return -2; // ошибка
@@ -110,6 +110,9 @@ int rfpos_calc(
   for (i = 1; i < n; i++)
     if (tmin > t[i]) tmin = t[i];
 
+  // FIXME
+  printf(">>> tmin = %.8g\n", tmin);
+
   // заполнить матрицу исходных данных
   ptr = m;
   for (i = 0; i < n; i++)
@@ -119,6 +122,12 @@ int rfpos_calc(
 
     self->y.d[i][d] = (t[i] - tmin) * RFPOS_C; // секунды -> метры
   }
+  
+  // FIXME
+  printf(">>> d:");
+  for (i = 0; i < n; i++)
+    printf(" %g", self->y.d[i][d]);
+  printf("\n");
 
   // вычислить оценку d0 искомой точки
   d0 = 0.;
@@ -134,6 +143,9 @@ int rfpos_calc(
   }
   d0 /= (double) n;
 
+  // FIXME
+  printf(">>> t0 ~ %.8g\n", d0 / RFPOS_C + tmin);
+
   // заполнить исходную точку поиска решения
   for (j = 0; j < d; j++)
     self->x.d[j] = p[j];
@@ -148,6 +160,12 @@ int rfpos_calc(
     // вычислить "невязку"
     rfpos_f(n, d, &self->x, &self->y, &self->f);
 
+    // FIXME
+    printf(">>> f:");
+    for (j = 0; j < n; j++)
+      printf(" %g", self->f.d[j]);
+    printf("\n");
+
     // оценить невязку по модулю
     s = 0.;  
     for (j = 0; j <= d; j++)
@@ -155,6 +173,7 @@ int rfpos_calc(
       q = self->f.d[j];
       s += q * q;
     }
+    printf(">>> mod(f) = %g [m]\n", sqrt(s)); // FIXME
     if (s <= e)
       break; // успех: достигнута требуемая точность
 
@@ -170,9 +189,21 @@ int rfpos_calc(
     if (err < 0)
       break; // ошибка решения ?! Почему? FIXME
 
+    // FIXME
+    printf(">>> dx:");
+    for (j = 0; j <= d; j++)
+      printf(" %g", self->dx.d[j]);
+    printf("\n");
+
     // выполнить коррекцию: x += dx
     for (j = 0; j <= d; j++)
-      self->x.d[j] += self->dx.d[j];
+      self->x.d[j] -= self->dx.d[j];
+
+    // FIXME
+    printf(">>>");
+    for (j = 0; j < d; j++)
+      printf(" %f", self->x.d[j]);
+    printf("\n");
 
     la_vector_free(&self->dx);
   }
@@ -184,6 +215,32 @@ int rfpos_calc(
     r[j] = self->x.d[j];
 
   return i; // вернуть число выполненных итераций
+}
+//----------------------------------------------------------------------------
+// функция тестирования
+void rfpos_test(
+  // на входе:
+  int d,           // размерность координат или число неизвестных (2 или 3)
+  int n,           // число приёмников, принявших задерженный сигнал (n > d)
+  const double *m, // матрица координат приёмников [n][d]
+  const double *p, // радиус нахождения приёмника [d]
+  double t0,       // время излучения сигнала передатчиком
+  // на выходе:
+  double *t) // вектор временных меток приёма сигнала приёмниками [n]
+{
+  int i, j;
+  const double *ptr = m;
+
+  for (i = 0; i < n; i++)
+  {
+    double q, s = 0.;
+    for (j = 0; j < d; j++)
+    {
+      q = p[j] - *ptr++;
+      s += q * q;
+    }
+    t[i] = sqrt(s) / RFPOS_C + t0;
+  }
 }
 //----------------------------------------------------------------------------
 
