@@ -49,16 +49,27 @@ void rfpos_free(rfpos_t *self);
 int rfpos_calc(
   rfpos_t *self, // структура данных компонента
   // на входе:
-  int it,    // максимальное число итераций
-  double e,  // желаемая численная точность оценки координат [м]
-  int d,     // размерность координат или число неизвестных (2 или 3)
-  int n,     // число приёмников, принявших задерженный сигнал (n > d)
-  double *m, // матрица координат приёмников [n][d]
-  double *t, // вектор временных меток приёма сигнала приёмниками [с], n шт
-  double *p, // радиус вектор предпологаемого нахождения приёмника
+  int it,          // максимальное число итераций
+  double e,        // желаемая численная точность оценки координат [м]
+  int d,           // размерность координат или число неизвестных (2 или 3)
+  int n,           // число приёмников, принявших задерженный сигнал (n > d)
+  const double *m, // матрица координат приёмников [n][d]
+  const double *t, // вектор временных меток приёма сигнала приёмниками [n]
+  const double *p, // радиус вектор предпологаемого нахождения приёмника [d]
   // на выходе:
   double *t0, // оценка времени излучения сигнала передатчиком
-  double *r); // радиус вектор приёмника, если решение найдено [м], d шт
+  double *r); // радиус вектор приёмника, если решение найдено [d]
+//----------------------------------------------------------------------------
+// функция тестирования
+void rfpos_test(
+  // на входе:
+  int d,           // размерность координат или число неизвестных (2 или 3)
+  int n,           // число приёмников, принявших задерженный сигнал (n > d)
+  const double *m, // матрица координат приёмников [n][d]
+  const double *p, // радиус нахождения приёмника [d]
+  double t0,       // время излучения сигнала передатчиком
+  // на выходе:
+  double *t); // вектор временных меток приёма сигнала приёмниками [n]
 //----------------------------------------------------------------------------
 #ifdef __cplusplus
 }
