@@ -7,12 +7,78 @@
  * Licensed by GNU General Public License version 2
  */
 
-#include "rfpos.h"
-
+//----------------------------------------------------------------------------
+#include <stdio.h> // printf()
+#include "rfpos.h" // `rfpos_t`
+//----------------------------------------------------------------------------
 int main()
 {
+  int retv;
+  int i;
+  int d = 3;
+  int n = 5;
+  rfpos_t rfpos;
+  
+  // координаты приёмников, расположенных по углам помещения
+  // 10x20м и один под потолком (h=6м)
+  double m[] = { 
+     0.,  0., 3.,  // x1, y1, z1
+    20.,  0., 3.,  // x2, y2, z2
+    20., 10., 3.,  // x3, y3, z3
+     0., 10., 3.,  // x4, y4, z4
+    10.,  5., 6.}; // x5, y5, z5
+
+  // исходные координаты передатчика
+  double q[] = {3., 2., 1.}; // x0, y0, z0
+  
+  // первичная точка для итерационного поиска
+  //double p[] = {3., 2., 1.}; // x', y', z'
+  double p[] = {10., 5., 0.}; // x', y', z'
+
+  // вектор вычислинных координат передатчика
+  double r[3]; // x0, y0, z0
+
+  // время излучения сигнала передатчиком
+  double t0 = 1., T0 = 1e-8; // сек
+
+  // временные метки приёма сигнала приёмниками
+  double t[5];
+
+  // инициализировать компонент
+  rfpos_init(&rfpos, 3, 100);
+    
+  // вычислить времнные метки приёма сигнала для теста (t)
+  rfpos_test(d, n, m, q, T0, t);
+  
+  // FIXME
+  printf(">>> t:");
+  for (i = 0; i < n; i++)
+    printf(" %.8g", t[i]);
+  printf("\n");
+
+  // запустить ГЛАВНУЮ функцию
+  retv = rfpos_calc(
+    &rfpos, // структура данных компонента
+    10,     // максимальное число итераций
+    1e-3,   // желаемая численная точность оценки координат [м]
+    3,      // размерность координат или число неизвестных (2 или 3)
+    5,      // число приёмников, принявших задерженный сигнал (n > d)
+    m,      // матрица координат приёмников [n][d]
+    t,      // вектор временных меток приёма сигнала приёмниками [n]
+    p,      // радиус вектор предпологаемого нахождения приёмника [d]
+    &t0,    // оценка времени излучения сигнала передатчиком
+    r);     // радиус вектор приёмника, если решение найдено [d]
+ 
+  printf("retv = %i\n", retv);
+  printf("r = [%f, %f, %f]\n", r[0], r[1], r[2]);
+  printf("t0 = %.8g\n", t0);
+ 
+  // деинициализировать компонент
+  rfpos_free(&rfpos);
+  
   return 0;
 }
+//----------------------------------------------------------------------------
 
 /*** end of "rfpos_test.c" ***/
 
