@@ -1,4 +1,14 @@
 2018.03.02:
- * начало работы над идеей (постановка задачи в README.md)
- * набросан макет модуля rfpos.c/rfpos.h
+ * начало работы над идеей (постановка задачи в "README.md")
+ * откопаны в старых архивах исходники модуля "la.c/la.h"
+ * набросн макет модуля "rfpos.c/rfpos.h"
+ * набросаны прототипы функций: rfpos_init(), rfpos_free() rfpos_calc()
+ * реализована функции rfpos_f() и rfpos_w()
+ * реализована главная функция rfpos_calc()
+ * реализована функция для тестирования rfpos_test()
+ * начата отладка и тестирование (работа над модулем "rfpos_test.c")
+ * (затрачено около 6 часов работы: "от постановки задачи до начала отладки")
+ * исправлена ошибочка ("опечаточка") в функции rfpos_f()
+ * исправлена ошибка в rfpos_calc() и "README.md" (X <= X - dX) - МИНУС!
+ * получена первая работоспособность (через час после начала отладки)
 
